# path-tracer

./: CMakeLists.txt  main.cpp
include/: Tracer.h  mathUtils.h  samplingUtils.h
include/algebraUtils/: Dir.h  Mat.h  Point.h
include/scene/: Camera.h  Image.h  LightSource.h  Material.h  RGB.h  Ray.h  Scene.h  Texture.h
include/shapes/: Box.h  Circle.h  Cone.h  Cylinder.h  Mesh.h  MeshTriangle.h  Plane.h  Pyramid3.h  Pyramid4.h  Quad.h  Shape.h  Sphere.h  Triangle.h
include/utils/: mathUtils.h  samplingUtils.h
ply/: Goku.obj.ply  cube.ply  urn2.ply
src/: CMakeLists.txt  Tracer.cpp
src/scene/: CMakeLists.txt  Camera.cpp  Image.cpp  LightSource.cpp  Material.cpp  RGB.cpp  Ray.cpp  Scene.cpp  Texture.cpp
src/shapes/: Box.cpp  CMakeLists.txt  Circle.cpp  Cone.cpp  Cylinder.cpp  Mesh.cpp  MeshTriangle.cpp  Plane.cpp  Pyramid3.cpp  Pyramid4.cpp  Quad.cpp  Sphere.cpp  Triangle.cpp
textures/: stone.ppm
